--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,17 +12,22 @@
     "dependencies": {
         "@hookform/resolvers": "^5.2.2",
         "@tanstack/react-query": "^5.90.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
         "echarts": "^5.6.0",
         "echarts-wordcloud": "^2.1.0",
+        "lucide-react": "^0.544.0",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "react-hook-form": "^7.63.0",
         "react-router-dom": "^7.9.2",
+        "tailwind-merge": "^3.3.1",
         "zod": "^4.1.11"
     },
     "devDependencies": {
         "@eslint/js": "^9.36.0",
         "@tailwindcss/vite": "^4.1.13",
+        "@types/node": "^24.5.2",
         "@types/react": "^19.1.13",
         "@types/react-dom": "^19.1.9",
         "@vitejs/plugin-react": "^5.0.3",
@@ -31,6 +36,7 @@
         "eslint-plugin-react-refresh": "^0.4.20",
         "globals": "^16.4.0",
         "tailwindcss": "^4.1.13",
+        "tw-animate-css": "^1.4.0",
         "typescript": "~5.8.3",
         "typescript-eslint": "^8.44.0",
         "vite": "^7.1.7"
