--- a/apps/api/requirements.txt
+++ b/apps/api/requirements.txt
@@ -10,3 +10,12 @@ rq==1.16.2
 redis==5.0.8
 pytest==8.3.3
 httpx==0.27.0
+websockets==12.0
+pyotp==2.9.0
+pandas==2.2.3
+weasyprint==61.2
+transformers==4.44.2
+torch==2.4.1
+keybert==0.8.4
+google-generativeai==0.6.0
+scikit-learn==1.5.2
