--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,7 +11,17 @@
     "lint": "echo \"frontend lint placeholder\""
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.50.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "echarts": "^5.5.0",
+    "echarts-wordcloud": "^2.1.0",
+    "lucide-react": "^0.447.0",
+    "react-hook-form": "^7.52.1",
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
+    "zod": "^3.23.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
@@ -19,13 +29,13 @@
     "@testing-library/jest-dom": "^6.6.2",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.3.7",
-    "@types/react-dom": "^18.3.0",
+    "@types/react": "^19.0.1",
+    "@types/react-dom": "^19.0.1",
+    "@tailwindcss/vite": "^4.0.0-alpha.13",
     "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.20",
     "jsdom": "^27.0.0",
-    "postcss": "^8.4.47",
-    "tailwindcss": "^3.4.13",
+    "tailwindcss": "^4.0.0-alpha.13",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.6.2",
     "vite": "^5.4.8",
     "vitest": "^1.6.0"
