--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,4 +1,5 @@
 {
+  "extends": "../../packages/config/tsconfig/react-library.json",
   "compilerOptions": {
     "target": "ESNext",
     "useDefineForClassFields": true,
@@ -14,7 +15,14 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "baseUrl": ".",
+    "paths": {
+      "@proficiency/shared-types": ["../packages/shared-types/src"],
+      "@proficiency/shared-types/*": ["../packages/shared-types/src/*"],
+      "@proficiency/ui": ["../packages/ui/src"],
+      "@proficiency/ui/*": ["../packages/ui/src/*"]
+    }
   },
   "include": ["src"],
   "references": [{ "path": "./tsconfig.node.json" }]
