--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
     "lint": "echo \"frontend lint placeholder\""
   },
   "dependencies": {
+    "@proficiency/ui": "workspace:*",
     "@hookform/resolvers": "^3.9.0",
     "@tanstack/react-query": "^5.50.0",
     "class-variance-authority": "^0.7.0",
