--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -5,6 +5,6 @@
   "scripts": {
     "dev": "uvicorn src.main:app --reload --host 0.0.0.0 --port 8000",
     "lint": "echo \"backend lint placeholder\"",
-    "test": "python -m pytest || echo \"pytest not configured\""
+    "test": "python -m pytest"
   }
 }
