feat: Implement database and AI environment setup
This commit introduces the initial database setup using SQLAlchemy and Alembic for migrations. It also includes the core data models for the application and configures the environment for AI-powered features.

Key changes:
- Added SQLAlchemy and Alembic for database schema management.
- Defined core data models for identity, academic, evaluation, and AI reporting.
- Configured the application to use environment variables for database settings.
- Added a `db:migrate` script to run database migrations.
- Updated the worker to include AI and machine learning libraries.
- Created initial documentation for story 1.2, including test design and risk assessment.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "packageManager": "pnpm@9.11.0",
   "scripts": {
     "lint": "echo \"lint placeholder\"",
-    "test": "echo \"test placeholder\""
+    "test": "echo \"test placeholder\"",
+    "db:migrate": "docker compose run --rm api alembic upgrade head"
   }
 }
