--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
-DATABASE_URL=mysql+pymysql://root:@db:3306/proficiency-database
+DATABASE_URL=mysql+pymysql://proficiency:proficiency@db:3307/proficiency
 REDIS_URL=redis://redis:6379/0
-VITE_API_BASE_URL=http://localhost:3000/api
+VITE_API_BASE_URL=http://localhost:8000/api
